@@ -109,6 +109,8 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
+    TAJO-344: Tajo cannot recognize negative numeric expressions. (hyunsik)
+
     TAJO-393: Unit tests must use test-data directory. (hyunsik)
 
     TAJO-388: limit clause does not work properly. (hyunsik)
